--- a/index.html
+++ b/index.html
@@ -15,22 +15,19 @@
 <body class="container" onload="onLoad()">
 
     <div class="header">
-        <h1>Is Andrew Tatham Available? </h1>
-        <h1 class="bg-success hidden">Yes, I am available immediatley for contract .NET development roles in Leeds or working remotley</h1>
-        <h1 class="bg-danger">No. I am currently in contract until Mid June </h1>
+        <em>"I found your CV online and wanted to know..."</em>
+        <h1>Q: Is Andrew Tatham Available? </h1>
+        <h1 class="bg-success hidden">A: Yes, I am available immediatley for <span class="lookingFor"></span></h1>
+        <h1 class="bg-danger">A: No. I am currently in contract until Mid June </h1>
 
-        <p class="lead">Feel free to email me at <strong>andrewtatham at gmail dot com</strong><br/> To unlock my phone number please answer the below questions.</p>
+        <p>Please note that I am looking for <span class="lookingFor">.</span></p>
+        <p>Feel free to email me at <strong>andrewtatham at gmail dot com</strong></p>
+        <p>To unlock my phone number please answer the below questions.</p>
     </div>
-    <div id="questions" class="questions">
+    <div id="questions" class="questions"></div>
+    <div id="winner" class="winner hidden"></div>
 
-    </div>
-    <div id="winner" class="winner hidden">
-        
-
-    </div>
-
-
-
+    <footer><small><em><p class="text-center text-muted">I get an excessive amount of speculative and often irrelevant calls to my phone. Please do not call unless you are certain that the opportunity matches my requirements. Thankyou.</p></em></small></footer>
 </body>
 
 </html>
