--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Is Andrew Tatham Available?</title>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -19,7 +21,7 @@
         <em>You've found my CV online and wanted to know...</em>
         <h1>Q: Is Andrew Tatham Available? </h1>
         <div id="available" class="hidden">
-            <h1 class="alert alert-success">A: Yes, I am available <span id="availableFrom" /> for <span class="lookingFor" /></h1>
+            <h1 class="alert alert-success">A: Yes. I am available <span id="availableFrom" /> for <span class="lookingFor" /></h1>
         </div>
         <div id="unavailable" class="hidden">
             <h1 class="alert alert-danger">A: No. I am currently in contract until <span id="inContractUntil" /> </h1>
@@ -32,6 +34,24 @@
     <div id="winner" class="winner hidden"></div>
 
     <footer><small><em><p class="text-muted">I get an excessive amount of speculative and often irrelevant calls to my phone. Please do not call unless you are certain that the opportunity matches my requirements. Thankyou.</p></em></small></footer>
+
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-99642452-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 
 </html>
