--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" src="availability.js"></script>
     <script type="text/javascript" src="questions.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
