hints and clearfix

--- a/index.html
+++ b/index.html
@@ -99,61 +99,70 @@
             </div>
         </div>
 
-        <h2>Skills:</h2>
-
         <div class="row justify-content-center">
-            <div class="col-6">
-                <div class="card card-outline-success">
-                    <div class="card-block">
-                        <i class="fa fa-check fa-5x fa-pull-left" aria-hidden="true"></i>
+            <div class="col-12">
+                <button class="btn btn-secondary" data-toggle="collapse" data-target="#hints">Need a hint?</button>
+                <div id="hints" class="collapse">
+                    <h2>Skills:</h2>
 
-                        <div><span class="lookingFor">.</span></div>
+                    <div class="row justify-content-center">
+                        <div class="col-6">
+                            <div class="card card-outline-success">
+                                <div class="card-block">
+                                    <i class="fa fa-check fa-5x fa-pull-left" aria-hidden="true"></i>
+
+                                    <div><span class="lookingFor">.</span></div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 justify-content-center">
+                            <div class="card card-outline-danger">
+                                <div class="card-block">
+                                    <i class="fa fa-times fa-5x fa-pull-left" aria-hidden="true"></i>
+
+                                    <div><span class="notLookingFor"></span></div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <h2>Locations:</h2>
+
+                    <div class="row justify-content-center">
+                        <div class="col-6">
+                            <div class="card card-outline-success">
+                                <div class="card-block">
+                                    <i class="fa fa-check fa-5x fa-pull-left" aria-hidden="true"></i>
+
+                                    <div><span class="locations"></span></div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card card-outline-danger">
+                                <div class="card-block">
+                                    <i class="fa fa-times fa-5x fa-pull-left" aria-hidden="true"></i>
+
+                                    <div><span class="notLocations"></span></div>
+
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
-            </div>
-            <div class="col-6 justify-content-center">
-                <div class="card card-outline-danger">
-                    <div class="card-block">
-                        <i class="fa fa-times fa-5x fa-pull-left" aria-hidden="true"></i>
 
-                        <div><span class="notLookingFor"></span></div>
-
-                    </div>
-                </div>
 
             </div>
         </div>
-
-        <h2>Locations:</h2>
-
-        <div class="row justify-content-center">
-            <div class="col-6">
-                <div class="card card-outline-success">
-                    <div class="card-block">
-                        <i class="fa fa-check fa-5x fa-pull-left" aria-hidden="true"></i>
-
-                        <div><span class="locations"></span></div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card card-outline-danger">
-                    <div class="card-block">
-                        <i class="fa fa-times fa-5x fa-pull-left" aria-hidden="true"></i>
-
-                        <div><span class="notLocations"></span></div>
-
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-
-
     </div>
+
+
+
 
     <h2>Email:</h2>
 
