mailing list and updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <script>
         dataLayer = [];
-
     </script>
     <!-- Google Tag Manager -->
     <script>
@@ -22,7 +21,6 @@
                 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-PVRZHTF');
-
     </script>
     <!-- End Google Tag Manager -->
     <title>Is Andrew Tatham Available?</title>
@@ -38,6 +36,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <!--<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">-->
 
 </head>
 
@@ -162,27 +162,54 @@
     </div>
 
 
-
-
-    <h2>Email:</h2>
-
     <div class="row">
-        <div class="col-12">
-            <p>Please email me at <b>andrewtatham at gmail dot com</b> if you're unsure.</p>
+        <div class="col-md">
+            <h2>Subscribe</h2>
+            <!-- Begin MailChimp Signup Form -->
+            <div id="mc_embed_signup">
+                <form action="https://kaizensoftwareengineering.us16.list-manage.com/subscribe/post?u=dc41dc649cf9ec0ad4323fb29&amp;id=05efcc1c30" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="b_dc41dc649cf9ec0ad4323fb29_05efcc1c30" tabindex="-1" value="">
+                        </div>
+                        <div class="clear">
+                            <input role="submit" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!--End mc_embed_signup-->
+        </div>
+        <div class="col-md">
+            <h2>Download</h2>
+            <a role="button" class="btn btn-primary" href="Andrew Tatham CV.docx" download>Latest CV</a>
+        </div>
+        <div class="col-md">
+            <h2>Websites</h2>
+            <div role="group" class="btn-group btn-group-vertical">
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="http://andrewtatham.com/">andrew tatham</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="http://kaizensoftwareengineering.com/">kaizen software engineering</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/andrewtatham/">linkedin</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://github.com/andrewtatham/">github</a>
+            </div>
+        </div>
+        <div class="col-md">
+            <h2>Email</h2>
+            <p> <a role="button" class="btn btn-primary" href="mailto:andrewtatham+website@gmail.com">andrewtatham@gmail.com</a>
+            </p>
         </div>
     </div>
 
-
-    <h2>Websites:</h2>
-
-    <div class="row">
-        <div class="col-12">
-            <p><a href="http://andrewtatham.com/">http://andrewtatham.com/</a> my personal site containing nothing of value</p>
-            <p><a href="http://kaizensoftwareengineering.com/">http://kaizensoftwareengineering.com/</a> my business site containing nothing of value</p>
-        </div>
-    </div>
-
-    <footer><small><em><p class="text-muted">I get an excessive amount of speculative and often irrelevant calls to my phone. Please do not call unless you are certain that the opportunity matches my requirements. Thankyou.</p></em></small></footer>
+    <footer>
+        <small>
+            <em>
+                <p class="text-muted">I get an excessive amount of speculative and often irrelevant calls to my phone. Please do not call unless you are certain that the opportunity matches my requirements. Thankyou.</p>
+            </em>
+        </small>
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
@@ -206,7 +233,6 @@
 
         ga('create', 'UA-99642452-1', 'auto');
         ga('send', 'pageview');
-
     </script>
 </body>
 
