added mailing list

--- a/index.html
+++ b/index.html
@@ -2,27 +2,7 @@
 <html lang="en">
 
 <head>
-    <script>
-        dataLayer = [];
-    </script>
-    <!-- Google Tag Manager -->
-    <script>
-        (function(w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start': new Date().getTime(),
-                event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s),
-                dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-PVRZHTF');
-    </script>
-    <!-- End Google Tag Manager -->
+
     <title>Is Andrew Tatham Available?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Andrew Tatham, Contract Software Developer, Leeds, Microsoft C#.NET, SQL Server" />
@@ -31,140 +11,60 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
 
-    <script src="https://use.fontawesome.com/433fce5395.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="styles.css">
-
-    <!--<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">-->
-
 </head>
 
 <body class="container" onload="onLoad()">
-
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PVRZHTF" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-    <div class="page-header">
-        <em>You've found my CV online and wanted to know...</em>
+    <div>
     </div>
 
-    <div class="row justify-content-center">
-        <div class="col-12">
-            <h1>Q: Is Andrew Tatham Available? </h1>
-        </div>
-    </div>
 
-    <div class="row justify-content-center">
-        <div class="col-12">
-            <div class="available">
-                <h1 class="alert alert-success">A: Yes. I am available from <b><span class="availableFrom" /></b>.</h1>
-            </div>
-
-            <div class="unavailable">
-                <div class="alert alert-danger">
-                    <h1 class="alert-heading">A: No, please do not call.</h1>
-                    <h2>
-                        <ul>
-                            <li>I am in contract until <b><span class="inContractUntil" /></b>.</li>
-                            <li>I am not interested in new opportunities right now.</li>
-                            <li>I'm busy working hard for my current client and do not want to be distracted.</li>
-                        </ul>
-                    </h2>
-                </div>
-
-
-            </div>
-
-        </div>
-    </div>
-
+    <p><em>You've found my CV online and wanted to know...</em></p>
+    <h1>Is Andrew Tatham Available?</h1>
     <div class="available">
-
-        <div class="row justify-content-center">
-            <div class="col-12">
-                <div class="card card-outline-primary">
-                    <div class="card-block">
-                        <div class="quiz">
-                            <p class="lead">To unlock my phone number please answer the below questions.</p>
-                            <div id="questions" class="questions"></div>
-                            <div id="winner" class="winner"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="alert alert-success">
+            <h1><i class="fas fa-check"></i> <b><span class="availableFrom" /></b>.</h1>
+            <h2><i class="fas fa-mobile-alt"></i> To unlock my phone number please answer the below questions.</h2>
         </div>
 
-        <div class="row justify-content-center">
-            <div class="col-12">
-                <button class="btn btn-secondary" data-toggle="collapse" data-target="#hints">Need a hint?</button>
-                <div id="hints" class="collapse">
-                    <h2>Skills:</h2>
 
-                    <div class="row justify-content-center">
-                        <div class="col-6">
-                            <div class="card card-outline-success">
-                                <div class="card-block">
-                                    <i class="fa fa-check fa-5x fa-pull-left" aria-hidden="true"></i>
-
-                                    <div><span class="lookingFor">.</span></div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 justify-content-center">
-                            <div class="card card-outline-danger">
-                                <div class="card-block">
-                                    <i class="fa fa-times fa-5x fa-pull-left" aria-hidden="true"></i>
-
-                                    <div><span class="notLookingFor"></span></div>
-
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <h2>Locations:</h2>
-
-                    <div class="row justify-content-center">
-                        <div class="col-6">
-                            <div class="card card-outline-success">
-                                <div class="card-block">
-                                    <i class="fa fa-check fa-5x fa-pull-left" aria-hidden="true"></i>
-
-                                    <div><span class="locations"></span></div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="card card-outline-danger">
-                                <div class="card-block">
-                                    <i class="fa fa-times fa-5x fa-pull-left" aria-hidden="true"></i>
-
-                                    <div><span class="notLocations"></span></div>
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-
-            </div>
+        <div class="quiz">
+            <div id="questions" class="questions"></div>
+            <div id="winner" class="winner"></div>
         </div>
     </div>
 
+
+    <div class="unavailable">
+        <div class="alert alert-danger">
+
+            <h1 class="alert-heading">A: <i class="fas fa-times"></i> No, I'm not available right now.</h1>
+            <h2>
+                <ul>
+                    <li><b><span class="inContractUntil" /></b>.</li>
+                    <li>I am not interested in new opportunities right now.</li>
+                    <li>I'm busy working hard for my current client and do not want to be distracted.</li>
+                    <li>Please do not call.</li>
+                </ul>
+            </h2>
+        </div>
+
+
+    </div>
+
+    <hr>
 
     <div class="row">
-        <div class="col-md">
+        <div class="col-sm">
+
             <h2>Subscribe</h2>
+            <p class="available">Please subscribe to be notified when my availability changes...</p>
+            <p class="unavailable">Please subscribe to be notified when I am available again....</p>
+
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
                 <form action="https://kaizensoftwareengineering.us16.list-manage.com/subscribe/post?u=dc41dc649cf9ec0ad4323fb29&amp;id=05efcc1c30" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -183,36 +83,33 @@
             </div>
             <!--End mc_embed_signup-->
         </div>
-        <div class="col-md">
+        <div class="col-sm">
             <h2>Download</h2>
-            <a role="button" class="btn btn-primary" href="Andrew Tatham CV.docx" download>Latest CV</a>
+            <p>You can download my latest CV here...</p>
+            <p><a role="button" class="btn btn-primary" href="Andrew Tatham CV.docx" download><i class="fas fa-file-alt"></i> Download my latest CV</a></p>
         </div>
-        <div class="col-md">
+        <div class="col-sm">
             <h2>Websites</h2>
+            <p>Other websites...</p>
             <div role="group" class="btn-group btn-group-vertical">
-                <a role="button" class="btn btn-outline-primary" target="_blank" href="http://andrewtatham.com/">andrew tatham</a>
-                <a role="button" class="btn btn-outline-primary" target="_blank" href="http://kaizensoftwareengineering.com/">kaizen software engineering</a>
-                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/andrewtatham/">linkedin</a>
-                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://github.com/andrewtatham/">github</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://www.linkedin.com/in/andrewtatham/"><i class="fab fa-linkedin"></i> linkedin</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://github.com/andrewtatham/"><i class="fab fa-github"></i> github</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://stackoverflow.com/users/352059/andrewtatham"><i class="fab fa-stack-overflow"></i> stack overflow</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://andrewtatham.com/"><i class="fas fa-user"></i> andrew tatham</a>
+                <a role="button" class="btn btn-outline-primary" target="_blank" href="https://kaizensoftwareengineering.com/"><i class="fas fa-user-tie"></i> kaizen software engineering</a>
             </div>
+
         </div>
-        <div class="col-md">
+        <div class="col-sm">
             <h2>Email</h2>
-            <p> <a role="button" class="btn btn-primary" href="mailto:andrewtatham+website@gmail.com">andrewtatham@gmail.com</a>
-            </p>
+            <p>You can email me at...</p>
+            <p><a role="button" class="btn btn-primary" href="mailto:andrewtatham+website@gmail.com"><i class="fas fa-envelope"></i> andrewtatham@gmail.com</a></p>
         </div>
     </div>
 
-    <footer>
-        <small>
-            <em>
-                <p class="text-muted">I get an excessive amount of speculative and often irrelevant calls to my phone. Please do not call unless you are certain that the opportunity matches my requirements. Thankyou.</p>
-            </em>
-        </small>
-    </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="availability.js"></script>
     <script type="text/javascript" src="questions.js"></script>
