Bootstrap styles and angular components

--- a/is-andrew-tatham-available/src/index.html
+++ b/is-andrew-tatham-available/src/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>IsAndrewTathamAvailable</title>
+  <title>Is Andrew Tatham Available?</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="keywords" content="Andrew Tatham, Contract Software Developer, Leeds, Microsoft C#.NET, SQL Server" />
+  <meta name="description" content="Andrew Tatham, a contract .NET software developer from Leeds, shares his latest availability through this website, for the benefit of recruiters, who will hopefully read it and act upon the information within, and stop calling with irrelevant roles."/>
+  <meta name="robots" content="index,follow" />
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
 </head>
+
 <body class="container">
-  <app-root></app-root>
+  <app-root><i class="fas fa-cog fa-spin"></i> Loading...</app-root>
 </body>
 </html>
