--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
   <script src="/assets/particles.min.js"></script>
   <script>
     particlesJS.load('particles-js', 'assets/particlesjs-config.json', function () {
-      console.log('callback - particles.js config loaded');
+      //console.log('callback - particles.js config loaded');
     });
 
   </script>
