unsplash background, angular update

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="Andrew Tatham, Contract Software Developer, Leeds, Microsoft C#.NET, SQL Server" />
-  <meta name="description" content="Andrew Tatham, a contract .NET software developer from Leeds, shares his latest availability through this website, for the benefit of recruiters, who will hopefully read it and act upon the information within, and stop calling with irrelevant roles."
-  />
+  <meta name="description" content="Andrew Tatham, a contract .NET software developer from Leeds, shares his latest availability through this website, for the benefit of recruiters, who will hopefully read it and act upon the information within, and stop calling with irrelevant roles." />
   <meta name="robots" content="index,follow" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-    crossorigin="anonymous">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99642452-1"></script>
   <script>
@@ -27,6 +26,16 @@
 
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
+
+
+</head>
+
+<body>
+
+  <div id="bg"></div>
+  <div class="container fade-in-2">
+    <app-root></app-root>
+  </div>
 
   <!-- Facebook Pixel Code -->
   <script>
@@ -53,8 +62,7 @@
 
   </script>
   <noscript>
-    <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=476530292769782&ev=PageView&noscript=1"
-    />
+    <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=476530292769782&ev=PageView&noscript=1" />
   </noscript>
   <!-- End Facebook Pixel Code -->
 
@@ -63,6 +71,7 @@
     _linkedin_partner_id = "426018";
     window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
     window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+
   </script>
   <script type="text/javascript">
     (function () {
@@ -79,21 +88,7 @@
     <img height="1" width="1" style="display:none;" alt="" src="https://dc.ads.linkedin.com/collect/?pid=426018&fmt=gif" />
   </noscript>
   <!-- LinkedIn End -->
-</head>
 
-<body>
-  <div id="particles-js"></div>
-  <div class="container">
-    <app-root>
-      <i class="fas fa-cog fa-spin"></i> Loading...</app-root>
-  </div>
-  <script src="/assets/particles.min.js"></script>
-  <script>
-    particlesJS.load('particles-js', 'assets/particlesjs-config.json', function () {
-      //console.log('callback - particles.js config loaded');
-    });
-
-  </script>
 </body>
 
 </html>
