--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,7 @@
   <div class="container fade-in-2">
     <div class="gap"></div>
 
-    <div class="jumbotron">
+    <div class="card content text-center">
 
       <p class="lead">
         <em>You've got my CV and wanted to know...</em>
