--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Is Andrew Tatham Available?</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="Andrew Tatham, Contract Software Developer, Leeds, Microsoft C#.NET, SQL Server" />
   <meta name="description" content="Andrew Tatham, a contract .NET software developer from Leeds, shares his latest availability through this website, for the benefit of recruiters, who will hopefully read it and act upon the information within, and stop calling with irrelevant roles." />
